[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/foxyadventure_modcreator/Dock.gd" type="Script" id=1]

[node name="MOD Info" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="LineEdit" parent="VBoxContainer"]
margin_top = 178.0
margin_right = 1024.0
margin_bottom = 202.0
placeholder_text = "Name"

[node name="author" type="LineEdit" parent="VBoxContainer"]
margin_top = 206.0
margin_right = 1024.0
margin_bottom = 230.0
placeholder_text = "Author"

[node name="description" type="LineEdit" parent="VBoxContainer"]
margin_top = 234.0
margin_right = 1024.0
margin_bottom = 258.0
placeholder_text = "Description"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 262.0
margin_right = 1024.0
margin_bottom = 286.0

[node name="main_script_file" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 945.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "Main Script File"

[node name="SelectMainScriptFile" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 949.0
margin_right = 1024.0
margin_bottom = 24.0
text = "Select file"

[node name="pck_files" type="LineEdit" parent="VBoxContainer"]
margin_top = 290.0
margin_right = 1024.0
margin_bottom = 314.0
placeholder_text = "PCK Files (will be autogenerated if blank)"

[node name="game_versions" type="LineEdit" parent="VBoxContainer"]
margin_top = 318.0
margin_right = 1024.0
margin_bottom = 342.0
text = "[v0.2.3]"
placeholder_text = "Supported game version(s)"

[node name="l_v_support" type="CheckBox" parent="VBoxContainer"]
margin_top = 346.0
margin_right = 1024.0
margin_bottom = 370.0
text = "Support lover versions"

[node name="h_v_support" type="CheckBox" parent="VBoxContainer"]
margin_top = 374.0
margin_right = 1024.0
margin_bottom = 398.0
text = "Support higher versions"

[node name="Generate" type="Button" parent="VBoxContainer"]
pause_mode = 2
margin_top = 402.0
margin_right = 1024.0
margin_bottom = 422.0
text = "Generate .cfg file"

[node name="GdDialog" type="FileDialog" parent="."]
visible = true
margin_right = 767.0
margin_bottom = 460.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Otw√≥rz plik"
mode = 0
filters = PoolStringArray( "*.gd ; GDScript Script", "*.py; Python Script" )
show_hidden_files = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer/SelectMainScriptFile" to="." method="_on_SelectMainScriptFile_pressed"]
[connection signal="pressed" from="VBoxContainer/Generate" to="." method="_on_Generate_pressed"]
[connection signal="file_selected" from="GdDialog" to="." method="_on_GdDialog_file_selected"]
